syntax = "proto3";

package realchat.delivery.v1;

import "message/v1/message.proto";

option go_package = "github.com/SARVESHVARADKAR123/RealChat/contracts/gen/go/delivery/v1;deliveryv1";

message DeliveryEvent {
  string conversation_id = 1;
  int64 sequence = 2;
  realchat.message.v1.Message message = 3;
}

message DeliveryConnectRequest {
  string user_id = 1;
  string device_id = 2;
  string conversation_id = 3;
  int64 last_received_sequence = 4;
}

service DeliveryApi {
  rpc Connect(stream DeliveryConnectRequest) returns (stream DeliveryEvent);
}
