syntax = "proto3";

package realchat.shared.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/SARVESHVARADKAR123/RealChat/contracts/gen/go/shared/v1;sharedv1";

enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  
  // Conversation events
  EVENT_TYPE_CONVERSATION_CREATED = 1;
  EVENT_TYPE_MEMBERSHIP_CHANGED = 2;
  
  // Message events
  EVENT_TYPE_MESSAGE_SENT = 10;
  EVENT_TYPE_MESSAGE_DELETED = 11;
  EVENT_TYPE_READ_RECEIPT_UPDATED = 12;
  
  // Presence events
  EVENT_TYPE_PRESENCE_UPDATED = 20;
}

message EventEnvelope {
  EventType event_type = 1;
  int32 schema_version = 2;
  google.protobuf.Timestamp occurred_at = 3;
  bytes payload = 4;
}
